# Job_Parser

./: README.md  config.py  database.ini  functions.py  main.py  pyproject.toml
classes/: db_Manager.py  functions.py  headhunter_api.py
fnc/: functions.py
